--- a/mcmc_cosmosis/Y3_params_priors/params_hyp.ini
+++ b/mcmc_cosmosis/Y3_params_priors/params_hyp.ini
@@ -156,9 +156,11 @@ interpolation = linear
 [hyperrank]
 file = cosmosis-standard-library/number_density/nz_multirank/nz_multirank.py
 nz_file = %(2PT_FILE)s
+resume=T
+resume_map=../data/${DATAFILE}_hyperrank.npy
 data_set = source
 dimensions = 3
-bin_ranks= 1 2 4 
+bin_ranks= 1 2 4
 
 [source_photoz_bias]
 file = cosmosis-standard-library/number_density/photoz_bias/photoz_bias.py
