--- a/mcmc_cosmosis/Y3_params_priors/params_hyp.ini
+++ b/mcmc_cosmosis/Y3_params_priors/params_hyp.ini
@@ -157,7 +157,7 @@ interpolation = linear
 file = cosmosis-standard-library/number_density/nz_multirank/nz_multirank.py
 nz_file = %(2PT_FILE)s
 resume=T
-resume_map=../data/${DATAFILE}_hyperrank.npy
+resume_map=/project/projectdirs/des/mgatti/Moments_analysis/final_chains//2pt_NG_final_2ptunblind_02_26_21_wnz_maglim_covupdate_6000HR.fits_hyperrank.npy 
 data_set = source
 dimensions = 3
 bin_ranks= 1 2 4
