--- a/mcmc_cosmosis/Y3_params_priors/params_t17.ini
+++ b/mcmc_cosmosis/Y3_params_priors/params_t17.ini
@@ -3,8 +3,8 @@
 
 [pipeline]
 #modules = consistency camb sigma8_rs halofit extrapolate fits_nz lens_photoz_width  lens_photoz_bias fast_pt source_photoz_bias IA pk_to_cl add_intrinsic add_eb shear_2pt_eplusb shear_2pt_eminusb choose_xip 2pt_gal_shear shear_m_bias add_pm smallratio_like moments_like
-modules = consistency  sigma8_rs fits_nz    source_photoz_bias moments_like
-likelihoods = moments smallratio
+modules = consistency  fits_nz  source_photoz_bias     moments_like
+likelihoods = moments 
 extra_output = cosmological_parameters/sigma_8 data_vector/2pt_chi2
 
 
